--- a/segor/src/main/resources/templates/user/transaksi.html
+++ b/segor/src/main/resources/templates/user/transaksi.html
@@ -58,7 +58,7 @@
     </style>
 </head>
 <body>
-    <div th:replace="fragments/navbar_user :: main-navbar"></div>
+    <div th:replace="fragments/navbar_user :: main-navbar('transaksi')"></div>
     <div class="container">
         <h2>Transaksi Saya</h2>
         <table>
