fix navbar bug in user lapangan

--- a/segor/src/main/resources/templates/user/lapangan.html
+++ b/segor/src/main/resources/templates/user/lapangan.html
@@ -8,7 +8,7 @@
 
 <body class="body-gor">
 
-    <div th:replace="fragments/navbar_user :: main-navbar"></div>
+    <div th:replace="fragments/navbar_user :: main-navbar('gor')"></div>
 
     <div class="body-table">
 
