fix redirecting bug in lapangan user

--- a/segor/src/main/resources/templates/user/lapangan.html
+++ b/segor/src/main/resources/templates/user/lapangan.html
@@ -14,7 +14,7 @@
 
         <div class="row gap-8">
             <h2>
-                <a th:href="@{/gor/list}" class="link-gor">
+                <a th:href="@{/user/gor}" class="link-gor">
                     Gor <span th:text="${gor != null ? gor.nama : 'Unknown'}"></span>
                 </a>
             </h2>
