add another coloumn in promo

--- a/segor/src/main/resources/static/css/style.css
+++ b/segor/src/main/resources/static/css/style.css
@@ -457,3 +457,9 @@ body {
     color: #b30000 !important;
     font-weight: bold;
 }
+
+.flex-between {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
