--- a/segor/src/main/resources/templates/logreg/index.html
+++ b/segor/src/main/resources/templates/logreg/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
 
-    <title>Freebie 44 - Marketing Web App (Tailwind CSS) by pixelcave</title>
+    <title>SEGOR</title>
 
     <meta
       name="description"
