change redirect in form booking admin

--- a/segor/src/main/resources/templates/booking/create.html
+++ b/segor/src/main/resources/templates/booking/create.html
@@ -68,7 +68,7 @@
         </div>
         <div class="form-actions">
             <button type="submit" class="button">Simpan</button>
-            <a th:href="@{'/lapangan/list/gor/' + ${id_gor}}" class="button-back">Kembali ke Daftar Lapangan</a>
+            <a th:href="@{'/booking/list'}" class="button-back">Kembali ke Booking</a>
         </div>
     </form>
     <script th:inline="javascript">
